examples/test/testpolicy3602.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3602
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key4: value25
      key31: value1
      key25: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value24
          key41: value13
      podSelector:
        matchLabels:
          key43: value33
          key29: value30
